Add sticky footer stytle

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">Copyright ©2017 OiMee</span>
-    <br>
-    <span class="text-muted">Design by Zion</span>
+    <span class="text-primary">Copyright ©2017 OiMee</span>
+    <span class="text-muted">Designed by Zion</span>
   </div>
 </footer>
