Install font-awesome-rails

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  */
 
 @import "bootstrap";
+@import "font-awesome";
 
 /* Sticky footer styles
 -------------------------------------------------- */
