--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -11,12 +11,12 @@
     <div class="navbar-nav">
       <% if !current_user %>
         <%= link_to("Register", new_user_registration_path, class: "nav-item nav-link") %>
-        <%= link_to("Login", new_user_session_path, class: "nav-link nav-item") %>
+        <%= link_to(fa_icon("sign-in", text: "Login"), new_user_session_path, class: "nav-link nav-item") %>
       <% else %>
         <div class="dropdown">
           <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= current_user.email %></button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <%= link_to("Logout", destroy_user_session_path, method: :delete, class: "dropdown-item") %>
+            <%= link_to(fa_icon("sign-out", text: "Logout"), destroy_user_session_path, method: :delete, class: "dropdown-item") %>
           </div>
         </div>
       <% end %>
