--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,6 +16,7 @@
         <div class="dropdown">
           <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= current_user.email %></button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <%= link_to("My Orders", account_orders_path, class: "dropdown-item") %>
             <%= link_to(fa_icon("sign-out", text: "Logout"), destroy_user_session_path, method: :delete, class: "dropdown-item") %>
           </div>
         </div>
